result/subtask14-forall/testcase02.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
INT_LIT 3
create array: 0
> Insert `a` (addr: 1) to scope level 1
/home/share/hw2/input/subtask14-forall/testcase02.cpp:2:13: error:  syntax error
     2 |    int a[3][ ];
       |            ^
Total lines: 2
